gabriel_barroso/p1/BNF.txt
<programa> ::= <header> <begin> <body> <end>

<header> ::= "PROGRAMA " <identificador> ":" <nova_linha>
<begin> ::= "INICIO" <nova_linha>
<end> ::= "FIM"

<body> ::= (<s>? (<comentario> | <declaracao_variavel>) <nova_linha>)* <atribuicao_res> <nova_linha>
<declaracao_variavel> ::= <identificador> <s>? "=" <s>? <expressao>
<atribuicao_res> ::= "RES ="

<comentario> ::= "//" <qualquer_coisa>* <nova_linha>

<expressao> ::= <termo> 
              | <expressao> <s>? "+" <s>? <termo> 
              | <expressao> <s>? "-" <s>? <termo>
<termo> ::= <fator> 
          | <termo> <s>? "*" <s>? <fator> 
          | <termo> <s>? "/" <s>? <fator>
<fator> ::= <numero> 
          | <identificador> 
          | <s>? "(" <s>? <expressao> <s>? ")" <s>?

<numero> ::= <positivo> | <negativo>
<positivo> ::= <digito>+
<negativo> ::= "-" <positivo>

<identificador> ::= <letra>+
<letra> ::= "A" | "B" | "C" | "D" | "E" | "F" | "G" | "H" | "I" | "J" | "K" | "L" | "M" | "N" | "O" | "P" | "Q" | "R" | "S" | "T" | "U" | "V" | "W" | "X" | "Y" | "Z" 
           | "a" | "b" | "c" | "d" | "e" | "f" | "g" | "h" | "i" | "j" | "k" | "l" | "m" | "n" | "o" | "p" | "q" | "r" | "s" | "t" | "u" | "v" | "w" | "x" | "y" | "z"
<digito> ::= "0" | "1" | "2" | "3" | "4" | "5" | "6" | "7" | "8" | "9"

<s> ::= " "*
<nova_linha> ::= "\n"
<qualquer_coisa> ::= <letra> | <digito> | <s> | <simbolo>
<simbolo> ::= "." | "," | ":" | "?" | "(" | ")" | "+" | "-" | "*" | "/" | "=" 
